# python-sdk-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_CN.md  permission_node.py  pyproject.toml  server_node.py  tagentacle.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
tagentacle_py_mcp/: __init__.py  auth.py  auth_client.py  mailbox.py  permission.py  server.py  transport.py
tests/: test_subscribe_levels.py
