[project]
name = "tagentacle-py-mcp"
version = "0.1.0"
description = "Tagentacle MCP Integration — Transport layer and built-in MCP Server for the Tagentacle bus"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tagentacle-py-core>=0.1.0",
    "mcp>=1.0",
    "anyio>=4.0",
]

[tool.uv.sources]
tagentacle-py-core = { git = "https://github.com/Tagentacle/python-sdk-core.git", branch = "main" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
