[project]
name = "tagentacle-py-mcp"
version = "0.4.0"
description = "Tagentacle MCP Integration — MCPServerComponent + BusMCPServer + /mcp/directory discovery"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tagentacle-py-core>=0.1.0",
    "tagentacle-py-tacl>=0.1.0",
    "mcp-interfaces>=0.1.0",
    "mcp>=1.8",
    "anyio>=4.0",
    "uvicorn>=0.20",
    "starlette",
]

[project.optional-dependencies]
permission = []

[tool.uv.sources]
tagentacle-py-core = { path = "../python-sdk-core", editable = true }
tagentacle-py-tacl = { path = "../python-sdk-tacl", editable = true }
mcp-interfaces = { path = "../mcp-interfaces", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
